--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,10 @@
         "psr-4": {
             "App\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests"
+        }
     }
 }
